Fix a bug with overlapping captions.

--- a/src/styles/Caption.css
+++ b/src/styles/Caption.css
@@ -10,7 +10,7 @@
 
 @media (max-width: 768px) {
   .caption {
-    bottom: 13%;
+    bottom: 1%;
   }
 }
 .caption a {
